Wrapper moved to JDK